# flatland-simulator

./: CMakeLists.txt  README.md
data/: map
src/: consoleHelper.cpp  consoleHelper.hpp  main.cpp
